@startuml

title __IMAGELOADER's Class Diagram__\n

  namespace com.itbird {
    namespace imageloader {
      class com.itbird.imageloader.DiskImageCache {
          + get()
          + put()
          + remove()
      }
    }
  }
  

  namespace com.itbird {
    namespace imageloader {
      interface com.itbird.imageloader.ImageCache {
          {abstract} + get()
          {abstract} + put()
          {abstract} + remove()
      }
    }
  }
  

  namespace com.itbird {
    namespace imageloader {
      class com.itbird.imageloader.ImageLoader {
          ~ mExecutor : ExecutorService
          - mContext : WeakReference<Context>
          - mHandler : Handler
          {static} - mInstance : ImageLoader
          {static} + getInstance()
          + setImageLCache()
          + setImageView()
          - ImageLoader()
          - downloadImage()
          - downloadUrlBitmap()
      }
    }
  }
  

  namespace com.itbird {
    namespace imageloader {
      class com.itbird.imageloader.ImageLoaderTestActivity {
          - mImageView : ImageView
          - url : String[]
          # onCreate()
          # onDestroy()
      }
    }
  }
  

  namespace com.itbird {
    namespace imageloader {
      class com.itbird.imageloader.MemoryImageCache {
          ~ bitmapLruCache : LruCache<String, Bitmap>
          + MemoryImageCache()
          + get()
          + put()
          + remove()
      }
    }
  }
  

  namespace com.itbird {
    namespace imageloader {
      class com.itbird.imageloader.MymageCache {
          + MymageCache()
          + get()
          + put()
          + remove()
      }
    }
  }
  

  com.itbird.imageloader.DiskImageCache .up.|> com.itbird.imageloader.ImageCache
  com.itbird.imageloader.ImageLoader o-- com.itbird.imageloader.ImageCache : mImageCache
  com.itbird.imageloader.ImageLoaderTestActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.itbird.imageloader.MemoryImageCache .up.|> com.itbird.imageloader.ImageCache
  com.itbird.imageloader.MymageCache .up.|> com.itbird.imageloader.ImageCache
  com.itbird.imageloader.MymageCache o-- com.itbird.imageloader.DiskImageCache : diskImageCache
  com.itbird.imageloader.MymageCache o-- com.itbird.imageloader.MemoryImageCache : memoryImageCache


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
